@@ -241,6 +241,8 @@ Other Changes
 * SOLR-8489: TestMiniSolrCloudCluster.createCollection to support extra & alternative collectionProperties
   (Christine Poerschke)
 
+* SOLR-8482: add & use QueryCommand.[gs]etTerminateEarly accessors. (Christine Poerschke)
+
 ==================  5.4.0 ==================
 
 Consult the LUCENE_CHANGES.txt file for additional, low level, changes in this release
